# rosario

./: .gitignore  Cargo.toml  README.md
books/: 1984_4820710  三体_2567698  三体全集_6518605  围城_1008145  嫌疑人X的献身_3211779  小王子_1084336  局外人_4908885  平凡的世界（全三部）_1200840  房思琪的初恋乐园_27614904  月亮与六便士_26954760  月亮和六便士_1858513  杀死一只知更鸟_6781808  活着_4913064  白夜行_10554308  百年孤独_6082808  红楼梦_1007305  解忧杂货店_25862578  追风筝的人_1770782  霍乱时期的爱情_10594787  飘_1068920
src/: book.rs  fetch.rs  logs.rs  main.rs  proxy.rs  store.rs  utils.rs
src/parser/: book_page.rs  mod.rs  root_page.rs  tag_page.rs
