[package]
name = "rosario"
version = "0.1.0"
authors = ["guoyunlong16 <guoyl1814@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json", "gzip"] }
scraper = "0.11.0"
ego-tree = "0.6"
anyhow = "*"
log = "*"
log4rs = "*"
lazy_static = "*"
